--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleDenyPassSimple_true_0/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleDenyPassSimple_true_0/policies.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (*) to (group != Hufflepuff and group != Slytherin)
+        description: 'src: (*) dst: (group != Hufflepuff and group != Slytherin) conn: All Connections'
         nsx-id: "10230"
     creationTimestamp: null
     name: policy_0
@@ -23,7 +23,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (*) to (group = Dumbledore)
+        description: 'src: (*) dst: (group = Dumbledore) conn: All Connections'
         nsx-id: "10230"
     creationTimestamp: null
     name: policy_1
@@ -42,7 +42,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (*) to (group != Hufflepuff and group != Slytherin)
+        description: 'src: (*) dst: (group != Hufflepuff and group != Slytherin) conn: All Connections'
         nsx-id: "10230"
     creationTimestamp: null
     name: policy_2
@@ -63,7 +63,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (*) to (group = Dumbledore)
+        description: 'src: (*) dst: (group = Dumbledore) conn: All Connections'
         nsx-id: "10230"
     creationTimestamp: null
     name: policy_3
