--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprSingleScope_false_0/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprSingleScope_false_0/policies.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (tag = Dumbledore) to (tag != Slytherin)
+        description: 'src: (tag = Dumbledore) dst: (tag != Slytherin) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
     name: policy_0
@@ -24,7 +24,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (tag = Dumbledore) to (tag != Slytherin)
+        description: 'src: (tag = Dumbledore) dst: (tag != Slytherin) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
     name: policy_1
@@ -46,7 +46,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (tag = Gryffindor) to (tag != Hufflepuff)
+        description: 'src: (tag = Gryffindor) dst: (tag != Hufflepuff) conn: All Connections'
         nsx-id: "1928"
     creationTimestamp: null
     name: policy_2
@@ -68,7 +68,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (tag = Gryffindor) to (tag != Hufflepuff)
+        description: 'src: (tag = Gryffindor) dst: (tag != Hufflepuff) conn: All Connections'
         nsx-id: "1928"
     creationTimestamp: null
     name: policy_3
@@ -90,7 +90,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (tag = Hufflepuff) to (tag != Slytherin)
+        description: 'src: (tag = Hufflepuff) dst: (tag != Slytherin) conn: All Connections'
         nsx-id: "1930"
     creationTimestamp: null
     name: policy_4
@@ -112,7 +112,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (tag = Hufflepuff) to (tag != Slytherin)
+        description: 'src: (tag = Hufflepuff) dst: (tag != Slytherin) conn: All Connections'
         nsx-id: "1930"
     creationTimestamp: null
     name: policy_5
@@ -134,7 +134,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (tag = Slytherin) to (tag != Gryffindor)
+        description: 'src: (tag = Slytherin) dst: (tag != Gryffindor) conn: All Connections'
         nsx-id: "1932"
     creationTimestamp: null
     name: policy_6
@@ -156,7 +156,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (tag = Slytherin) to (tag != Gryffindor)
+        description: 'src: (tag = Slytherin) dst: (tag != Gryffindor) conn: All Connections'
         nsx-id: "1932"
     creationTimestamp: null
     name: policy_7
