--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwarts_false_0/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwarts_false_0/policies.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Gryffindor) to (group = Web and group = Gryffindor)
+        description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
     name: policy_0
@@ -26,7 +26,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Hufflepuff) to (group = Web and group = Hufflepuff)
+        description: 'src: (group = Hufflepuff) dst: (group = Web and group = Hufflepuff) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
     name: policy_1
@@ -50,7 +50,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Slytherin) to (group = Web and group = Slytherin)
+        description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
     name: policy_2
@@ -74,7 +74,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Dumbledore) to (group = Web and group = Gryffindor)
+        description: 'src: (group = Dumbledore) dst: (group = Web and group = Gryffindor) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
     name: policy_3
@@ -98,7 +98,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Gryffindor) to (group = Web and group = Gryffindor)
+        description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
     name: policy_4
@@ -122,7 +122,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Hufflepuff) to (group = Web and group = Hufflepuff)
+        description: 'src: (group = Hufflepuff) dst: (group = Web and group = Hufflepuff) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
     name: policy_5
@@ -146,7 +146,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Slytherin) to (group = Web and group = Slytherin)
+        description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
     name: policy_6
@@ -170,7 +170,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Dumbledore) to (group = Web and group = Gryffindor)
+        description: 'src: (group = Dumbledore) dst: (group = Web and group = Gryffindor) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
     name: policy_7
@@ -194,7 +194,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Web and group = Gryffindor) to (group = App and group = Gryffindor)
+        description: 'src: (group = Web and group = Gryffindor) dst: (group = App and group = Gryffindor) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
     name: policy_8
@@ -220,7 +220,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Web and group = Hufflepuff) to (group = App and group = Hufflepuff)
+        description: 'src: (group = Web and group = Hufflepuff) dst: (group = App and group = Hufflepuff) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
     name: policy_9
@@ -246,7 +246,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Web and group = Slytherin) to (group = App and group = Slytherin)
+        description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
     name: policy_10
@@ -272,7 +272,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Web and group = Gryffindor) to (group = App and group = Gryffindor)
+        description: 'src: (group = Web and group = Gryffindor) dst: (group = App and group = Gryffindor) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
     name: policy_11
@@ -298,7 +298,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Web and group = Hufflepuff) to (group = App and group = Hufflepuff)
+        description: 'src: (group = Web and group = Hufflepuff) dst: (group = App and group = Hufflepuff) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
     name: policy_12
@@ -324,7 +324,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Web and group = Slytherin) to (group = App and group = Slytherin)
+        description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
     name: policy_13
@@ -350,7 +350,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = App and group = Gryffindor) to (group = DB and group = Gryffindor)
+        description: 'src: (group = App and group = Gryffindor) dst: (group = DB and group = Gryffindor) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
     name: policy_14
@@ -376,7 +376,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = App and group = Hufflepuff) to (group = DB and group = Hufflepuff)
+        description: 'src: (group = App and group = Hufflepuff) dst: (group = DB and group = Hufflepuff) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
     name: policy_15
@@ -402,7 +402,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = App and group = Slytherin) to (group = DB and group = Slytherin)
+        description: 'src: (group = App and group = Slytherin) dst: (group = DB and group = Slytherin) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
     name: policy_16
@@ -428,7 +428,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = App and group = Gryffindor) to (group = DB and group = Gryffindor)
+        description: 'src: (group = App and group = Gryffindor) dst: (group = DB and group = Gryffindor) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
     name: policy_17
@@ -454,7 +454,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = App and group = Hufflepuff) to (group = DB and group = Hufflepuff)
+        description: 'src: (group = App and group = Hufflepuff) dst: (group = DB and group = Hufflepuff) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
     name: policy_18
@@ -480,7 +480,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = App and group = Slytherin) to (group = DB and group = Slytherin)
+        description: 'src: (group = App and group = Slytherin) dst: (group = DB and group = Slytherin) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
     name: policy_19
