--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwarts_false_4/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwarts_false_4/policies.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (*) to (group = Web)
+        description: 'src: (*) dst: (group = Web) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
     name: policy_0
@@ -21,7 +21,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (*) to (group = Web)
+        description: 'src: (*) dst: (group = Web) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
     name: policy_1
@@ -40,7 +40,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Web) to (group = App)
+        description: 'src: (group = Web) dst: (group = App) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
     name: policy_2
@@ -62,7 +62,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = Web) to (group = App)
+        description: 'src: (group = Web) dst: (group = App) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
     name: policy_3
@@ -84,7 +84,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = App) to (group = DB)
+        description: 'src: (group = App) dst: (group = DB) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
     name: policy_4
@@ -106,7 +106,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: All Connections from (group = App) to (group = DB)
+        description: 'src: (group = App) dst: (group = DB) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
     name: policy_5
